data/derived/sp14/progs/unify/prog4532.ml.out
Characters 172-176:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type char list
       Type 'a * 'b is not compatible with type char 
